# BujoCliDB

./: .gitignore  MANUAL.md  REWRITE_PLAN.md  TLDR.md  USER_GUIDE.md  clibujo-claude-code-prompt.md  clibujo-spec-v2.md  pyproject.toml
src/clibujo/: __init__.py  cli.py
src/clibujo/commands/: __init__.py  collections.py  editor.py  export.py  index_cmd.py  interactive.py  migrate.py  migration_wizard.py  stats.py  sync.py  templates.py  undo.py
src/clibujo/core/: __init__.py  config.py  database.py  indexer.py  models.py  parser.py
src/clibujo/utils/: __init__.py  dates.py  display.py  files.py
src/clibujo_v2/: __init__.py  cli.py  interactive.py
src/clibujo_v2/commands/: __init__.py  collections.py  display.py  entries.py  export.py  habits.py  migrate.py  migrate_v1.py  mood.py  sync.py  undo.py
src/clibujo_v2/core/: __init__.py  collections.py  db.py  entries.py  habits.py  migrations.py  models.py  mood.py  mood_analysis.py  mood_display.py  undo.py
src/clibujo_v2/utils/: __init__.py  export.py  migrate_v1.py  sync.py
tests/: __init__.py  test_database.py  test_dates.py  test_files.py  test_habits.py  test_parser.py
tests/v2/: __init__.py  conftest.py  test_cli.py  test_collections.py  test_entries.py  test_habits.py  test_migrations.py  test_mood.py  test_mood_cli.py  test_undo.py
